# l3

./: Cargo.toml
t01/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
t01/migrations/: V1__create_table_users.sql  V2__create_table_posts.sql  V3__create_table_likes.sql
t01/src/: error.rs  lib.rs  main.rs  model.rs  utils.rs
t01/src/app/: mod.rs  routes.rs
t01/src/app/routes/: auth.rs
t01/src/repository/: mod.rs
t01/static/css/: index.css  login.css  post.css  posts.css  register.css  styles.css  user.css
t01/static/scripts/: login.js  post.js  posts.js  register.js  script.js  user.js
t01/templates/: error.askama.html  index.askama.html  login.askama.html  post.askama.html  posts.askama.html  register.askama.html  styles.css  user.askama.html
t03/: Cargo.toml  README.md
t03/src/: dto.rs  error.rs  lib.rs  main.rs  model.rs
t03/src/app/: mod.rs  routes.rs
t03/src/repository/: mod.rs
t05/: .env  Cargo.toml  README.md
t05/src/: dto.rs  lib.rs  main.rs  model.rs
t05/src/app/: commands.rs  mod.rs  routes.rs
t05/src/repository/: mod.rs
t07/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
t07/scripts/: create_events.sh  create_subscriptions.sh  get_events.sh
t07/src/: error.rs  lib.rs  main.rs  model.rs
t07/src/app/: error.rs  mod.rs  routes.rs
t07/src/repository/: mod.rs
t09/: Cargo.toml  README.md
t09/src/: main.rs
