[workspace]
members  = ["t07", "t09"]
resolver = "2"

[workspace.dependencies]
anyhow     = { version = "1.0" }
axum       = { version = "0.7", features = ["macros"] }
dotenvy    = { version = "0.15" }
itertools  = { version = "0.13" }
redis      = { version = "0.27", features = ["tokio-comp"] }
serde      = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }
tokio      = { version = "1", features = ["full"] }
