[package]
edition = "2021"
name    = "t01"
version = "0.1.0"

[dependencies]
anyhow            = { version = "1.0" }
askama            = { version = "0.12", features = ["with-axum"] }
askama_axum       = { version = "0.4" }
axum              = { version = "0.7", features = ["macros", "form"] }
bcrypt            = { version = "0.16" }
chrono            = { version = "0.4" }
deadpool-postgres = { version = "0.14" }
dotenvy           = { version = "0.15" }
env_logger        = { version = "0.11" }
http              = { version = "1.2" }
jsonwebtoken      = { version = "9.3.0" }
log               = { version = "0.4" }
lru               = { version = "0.13.0" }
refinery          = { version = "0.8", features = ["tokio-postgres"] }
reqwest           = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde             = { version = "1.0", features = ["serde_derive"] }
serde_json        = { version = "1.0" }
thiserror         = { version = "2.0.8" }
tokio             = { version = "1", features = ["full"] }
tokio-postgres    = { version = "0.7" }
tower-http        = { version = "0.6.2", features = ["full"] }
ulid              = { version = "1.1.3", features = ["postgres", "serde"] }
url               = { version = "2.5" }
