[package]
edition = "2021"
name    = "t05"
version = "0.1.0"

[dependencies]
anyhow             = { version = "1.0" }
axum               = { version = "0.7", features = ["macros", "ws"] }
chrono             = { version = "0.4" }
dotenvy            = { version = "0.15" }
futures            = { version = "0.3" }
http               = { version = "1.2" }
itertools          = { version = "0.14" }
serde              = { version = "1.0", features = ["serde_derive"] }
serde_json         = { version = "1.0" }
thiserror          = { version = "2.0.8" }
tokio              = { version = "1", features = ["full"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid               = { version = "1.1.3", features = ["postgres", "serde"] }
