[package]
edition = "2021"
name    = "t07"
version = "0.1.0"

[dependencies]
anyhow     = { workspace = true }
axum       = { workspace = true }
dotenvy    = { workspace = true }
redis      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
