[package]
edition = "2021"
name    = "t07"
version = "0.1.0"

[dependencies]
anyhow     = { version = "1.0" }
axum       = { version = "0.7", features = ["macros"] }
dotenvy    = { version = "0.15" }
env_logger = { version = "0.11" }
log        = { version = "0.4" }
redis      = { version = "0.27", features = ["tokio-comp"] }
serde      = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }
thiserror  = { version = "2.0.8" }
tokio      = { version = "1", features = ["full"] }
ulid       = { version = "1.1.3", features = ["serde"] }
